--- a/Style/productpage_style.css
+++ b/Style/productpage_style.css
@@ -178,6 +178,7 @@
     color: white;
     width: 100%;
     max-width: 300px;
+    margin-top: 10px;
 }
 
 #back-btn {
@@ -216,33 +217,33 @@
 .checked {
     color: #f28500;
     text-shadow: 0 0 3px #ffbf00;
-    font-size: 15px;
+    font-size: 20px;
     margin-bottom: 8px;
 }
 
 .unchecked {
     color: white;
     text-shadow: 0 0 4px #222222;
-    font-size: 15px;
+    font-size: 20px;
     margin-bottom: 8px;
 }
 
 .heart-button {
-    font-size: 25px;
+    font-size: 21px;
     color: #6c7075;
     margin-right: 8px;
 }
 
 .share {
-    font-size: 25px;
+    font-size: 21px;
     color: #f28500;
     margin-right: 8px;
 }
 
 .promo-item-text {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #428fe5;
+    font-size: 25px;
+    color: black;
 }
 
 .discount {
@@ -305,6 +306,10 @@
     }
 }
 
+.product-title{
+    color: black;
+}
+
 /*Reviews Section*/
 
 .card {
@@ -339,10 +344,102 @@
 }
 
 #star-rates {
-    font-size: 30px;
+    font-size: 15px;
 }
 
 .new-checked, .new-unchecked {
     font-size: 17px;
     margin: 3px;
+}
+
+/*Footer Styling*/
+.mb-4 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: #f28500;
+    font-size: 14px;
+}
+.mb-3 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container {
+    text-align: center;
+}
+.page-footer-class{
+    background-color: #6c7075;
+}
+
+.page-footer-class p{
+    background-color: #6c7075;
+    color: white;
+}
+.page-footer-class a{
+    color: white;
+}
+/*footer {*/
+
+/*background-attachment: scroll;*/
+/*background-color:#222;*/
+/*background-size: cover;*/
+/*background-position: bottom;*/
+/*}*/
+/*footer p {*/
+/*color: #ccc;*/
+/*}*/
+/*footer a {*/
+/*color: #ccc;*/
+/*}*/
+.social-pet li {
+    display: inline-block;
+    margin-right: 8px;
+}
+.social-pet li a {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    text-align: center;
+    display: block;
+    line-height: 30px;
+    background-color: #f28500;
+    color: #fff;
+}
+.social-pet li:nth-child(2) a {
+    background-color: #f28500;
+}
+.social-pet li:nth-child(3) a {
+    background-color: #f28500;
+}
+.social-pet li:nth-child(4) a {
+    background-color: #f28500;
+}
+.social-pet li a:hover {
+    background-color: #f28500;
+}
+.social-pet li a:hover i {
+    transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+
+footer .input-group-addon {
+    background-color: #0141a2;
+    padding: 10px;
+}
+
+.f-address li {
+    display: inline-block;
+    margin-left: -40px;
+}
+.f-address li i {
+    color: #f28500;
+    font-size: 18px;
+}
+.f-address li a {
+    color: #ccc;
+}
+/*=-Copyright-=*/
+.copyright {
+    background-color: #f28500;
+    padding: 12px 0;
+    font-size:14px;
 }
